--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   },
   "homepage": "https://github.com/jonathanprill/Employee-Tracker#readme",
   "dependencies": {
+    "cfonts": "^2.10.0",
+    "chalk": "^5.0.1",
     "console.table": "^0.10.0",
     "express": "^4.17.3",
+    "figlet": "^1.5.2",
     "inquirer": "^8.2.1",
     "mysql2": "^2.3.3"
   }
